# Pyrite

./: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt  setup.py
example/: EV2_York_test.ipynb
pyrite/: __init__.py  calibration.py  monte_carlo.py  quailty_control.py  quantification.py  uncertainty.py
tests/: __init__.py  test_monte_carlo.py
