[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyrite"
version = "0.1.0"
description = "SIMS quantification"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Josh Shea", email = "jjs83@cam.ac.uk" },
    { name = "Felix Boschetty", email = "felix.boschetty@manchester.ac.uk" } ]

dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "emcee>=3.0"
]

[project.urls]
Homepage = "https://github.com/OlivineOverlord/Pyrite"
Source = "https://github.com/OlivineOverlord/Pyrite"
Tracker = "https://github.com/OlivineOverlord/Pyrite/issues"

[tool.setuptools.packages.find]
where = ["pyrite"]